[package]
name = "requers"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
reqwest = { version = "0.12.24", default-features = false, features = ["native-tls", "blocking"] }
url = "2.5"

[lib]
name = "requers"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
