[package]
name = "requers"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "^0.27", features = ["extension-module"] }
ureq = { version = "^3", default-features = false, features = ["native-tls", "gzip"] }
url = "^2.5"
base64 = "^0.22"
sha2 = "^0.10"
hex = "^0.4"

[lib]
name = "requers"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
