[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "requers"
version = "0.1.0"
description = "A Rust-based HTTP client for Python with requests-like API"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["requers/"]