[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "requers"
version = "0.1.0"
description = "A Rust-based HTTP client for Python with some requests-like methods."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "M Zidane", email = "92719420+moooozi@users.noreply.github.com"},
]
keywords = ["http", "client", "requests", "rust", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
urls = {repository = "https://github.com/moooozi/requers"}

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["requers/"]